# LFP-TensorPipe

./: .gitignore  LICENSE  PUBLIC_EXPORT_MANIFEST.json  README.md  pyproject.toml
.github/workflows/: ci.yml  release-python.yml
demo/configs/align/: lfptensorpipe_alignment_cycle-l_config.json  lfptensorpipe_alignment_turn-stack_config.json  (+2 more)
demo/expected/: metrics.json
demo/records/csv/: metadata.txt
docs/: APP_CONTROL_REFERENCE.md  APP_TUTORIAL.md  INSTALL.md  MATLAB_BRIDGE_RUNTIME.md  PYINSTALLER_PACKAGING.md  RELEASE_STRATEGY.md  TECH_STACK.md
envs/: lfptp_py311_base.yml
paper/: __init__.py
paper/pd/: README.md  __init__.py  paths.py  specs.py  table_io.py
src/configs/: alignment.yml  alignment_preview.yml  features.yml  features_plot.yml  localization.yml  paths.yml  preproc.yml  recent_projects.yml  record.yml  tensor.yml
src/lfptensorpipe/: desktop_runtime.py  desktop_smoke.py  main.py
tests/: test_alignment_service.py  test_app_config.py  test_dataset_actions.py  test_dataset_index.py  test_desktop_runtime.py  test_desktop_smoke.py  test_features_service.py  test_gui_shell.py  test_icon_pipeline.py  test_localize_service.py  test_localize_viewer_worker.py  test_main_entry.py  test_mainwindow_dataset_flow.py  test_mainwindow_preproc_flow.py  test_matlab_runtime.py  test_path_resolver.py  test_preproc_filter_runtime.py  test_preproc_service.py  test_record_context_sync.py  test_runlog_store.py  test_tabular_grid.py  test_tensor_service.py
tests/gui/: test_features_subset.py  test_features_trial_params.py  test_visualdf.py
tools/: check_core_purity.py  check_module_size.py  check_no_monkeypatch.py  monkeypatch_allowlist.txt  run_demo.py  verify_demo_outputs.py
tools/release/: build_pyinstaller.py  build_pyinstaller_macos.sh  build_pyinstaller_windows.ps1  notarize_macos_app.py  notarize_macos_app.sh  sign_macos_app.py  sign_macos_app.sh
(+377 files in other folders)
